--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   cached_network_image: ^3.0.0
+  url_launcher: ^6.0.6
 
 dev_dependencies:
   flutter_test:
