--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
 
   cached_network_image: ^3.0.0
   url_launcher: ^6.0.6
+  video_player: ^2.1.5
 
 dev_dependencies:
   flutter_test:
